fix: top-left avatar decoration alignment

--- a/module/user-rail/user-rail.css
+++ b/module/user-rail/user-rail.css
@@ -39,22 +39,20 @@ module[data-module="user-rail"] .avatar-wrap {
 
 module[data-module="user-rail"] .avatar-image {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 8px;
+  left: 8px;
   width: 36px;
   height: 36px;
   border-radius: 50%;
   object-fit: cover;
-  transform: translate(-50%, -50%);
   display: block;
 }
 
 module[data-module="user-rail"] .avatar-frame {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 0;
+  left: 0;
   width: 52px;
   height: 52px;
-  transform: translate(-50%, -50%);
   pointer-events: none;
 }
